packages/sycamore-macro/tests/view/component-fail.stderr
error: unexpected end of input, expected `,` (help: make sure you pass the cx variable to the macro as an argument)
 --> tests/view/component-fail.rs:5:5
  |
5 | /     view! {
6 | |         div
7 | |     }
  | |_____^
  |
  = note: this error originates in the macro `view` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of input, expected either `(` or `{`
  --> tests/view/component-fail.rs:15:26
   |
15 |         let _: View<G> = view! { cx, C };
   |                          ^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `view` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find function, tuple struct or tuple variant `UnknownComponent` in this scope
  --> tests/view/component-fail.rs:12:38
   |
12 |         let _: View<G> = view! { cx, UnknownComponent() };
   |                                      ^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function, tuple struct or tuple variant `UnknownComponent` in this scope
  --> tests/view/component-fail.rs:13:38
   |
13 |         let _: View<G> = view! { cx, UnknownComponent {} };
   |                                      ^^^^^^^^^^^^^^^^ not found in this scope

error[E0308]: mismatched types
  --> tests/view/component-fail.rs:16:40
   |
16 |         let _: View<G> = view! { cx, C(1) };
   |                                        ^ expected `()`, found integer
